@@ -1,5 +1,8 @@
 2003-10-20  Emmanuel Beffara  <manu@beffara.org>
 
+	* src/graphics/__init__.py, src/graphics/convert.py: Added graphics
+	module 'convert' for ImageMagick conversion.
+
 	* src/util.py, src/graphics/__init__.py: Changed the Converter class
 	to allow several modules for a given rewriting rule.
 
